--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -40,7 +40,7 @@
                     </p>
                 </div>
                 <div class="column">
-                    <p>
+                    <p class="wrapper">
                         <strong>Note:</strong> Some search results are cached, while others may take some time to load from the <a href="http://developer.nytimes.com/docs/read/article_search_api_v2">NYT Article Search API</a>. Please be patient.
                         <br><br>
                         <a href="http://developer.nytimes.com/">
