Added a link to UW.edu, because why not, I guess

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -36,7 +36,7 @@
                 <div class="column">
                     <p>
                         <strong>Nested Year Timelines (NYT)</strong> is a hierarchical timeline visualization. It supports exploring large sets of news articles from <strong><a href="http://nyt.com">The New York Times</a></strong>, based on a search query. <strong>Hover on or click a bar below to start exploring.</strong>
-                        <br><br>Created by <strong><a href="http://stewed.co">Michael Beswetherick</a></strong> and <strong><a href="https://kohlmannj.com/">Joe Kohlmann</a></strong> as a final project for <a href="http://courses.cs.washington.edu/courses/cse512/14wi/">CSE 512: Data Visualization (Winter 2014)</a> at University of Washington.
+                        <br><br>Created by <strong><a href="http://stewed.co">Michael Beswetherick</a></strong> and <strong><a href="https://kohlmannj.com/">Joe Kohlmann</a></strong> as a final project for <a href="http://courses.cs.washington.edu/courses/cse512/14wi/">CSE 512: Data Visualization (Winter 2014)</a> at the <a href="http://uw.edu/">University of Washington</a>.
                     </p>
                 </div>
                 <div class="column">
