--- a/flask/static/css/nyt.css
+++ b/flask/static/css/nyt.css
@@ -50,6 +50,12 @@ header h1 {
   font-size: 24px;
 }
 /* line 70, ../sass/nyt.scss */
+header h2 {
+  font-size: 18px;
+  font-weight: 500;
+  color: #999999;
+}
+/* line 76, ../sass/nyt.scss */
 header #page {
   font-family: Avenir;
   background-color: #d9d9d9;
@@ -59,17 +65,17 @@ header #page {
   width: 100%;
 }
 
-/* line 80, ../sass/nyt.scss */
+/* line 86, ../sass/nyt.scss */
 p, text {
   font-size: 9.23pt;
 }
 
-/* line 84, ../sass/nyt.scss */
+/* line 90, ../sass/nyt.scss */
 text {
   fill: white;
 }
 
-/* line 88, ../sass/nyt.scss */
+/* line 94, ../sass/nyt.scss */
 .content {
   clear: both;
   position: relative;
@@ -81,7 +87,7 @@ text {
   /* Magic padding to prevent things from getting cut off */
   padding-bottom: 64px;
 }
-/* line 98, ../sass/nyt.scss */
+/* line 104, ../sass/nyt.scss */
 .content:after {
   content: "";
   width: 256px;
@@ -106,15 +112,15 @@ text {
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-/* line 116, ../sass/nyt.scss */
+/* line 122, ../sass/nyt.scss */
 .content.loading:after {
   opacity: 1;
 }
-/* line 120, ../sass/nyt.scss */
+/* line 126, ../sass/nyt.scss */
 .content.years {
   height: 200px;
 }
-/* line 123, ../sass/nyt.scss */
+/* line 129, ../sass/nyt.scss */
 .content.years .months_timeline, .content.years .articles_timeline {
   opacity: 0;
   -webkit-transform: scale(1, 0);
@@ -123,7 +129,7 @@ text {
   -o-transform: scale(1, 0);
   transform: scale(1, 0);
 }
-/* line 128, ../sass/nyt.scss */
+/* line 134, ../sass/nyt.scss */
 .content.years .years_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, -532px) scale(1, 1);
@@ -132,11 +138,11 @@ text {
   -o-transform: translate(0, -532px) scale(1, 1);
   transform: translate(0, -532px) scale(1, 1);
 }
-/* line 137, ../sass/nyt.scss */
+/* line 143, ../sass/nyt.scss */
 .content.years-months {
   height: 416px;
 }
-/* line 140, ../sass/nyt.scss */
+/* line 146, ../sass/nyt.scss */
 .content.years-months .articles_timeline {
   opacity: 0;
   -webkit-transform: scale(1, 0);
@@ -145,7 +151,7 @@ text {
   -o-transform: scale(1, 0);
   transform: scale(1, 0);
 }
-/* line 145, ../sass/nyt.scss */
+/* line 151, ../sass/nyt.scss */
 .content.years-months .months_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, -316px) scale(1, 1);
@@ -154,7 +160,7 @@ text {
   -o-transform: translate(0, -316px) scale(1, 1);
   transform: translate(0, -316px) scale(1, 1);
 }
-/* line 153, ../sass/nyt.scss */
+/* line 159, ../sass/nyt.scss */
 .content.years-months .years_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, -316px) scale(1, 1);
@@ -163,11 +169,11 @@ text {
   -o-transform: translate(0, -316px) scale(1, 1);
   transform: translate(0, -316px) scale(1, 1);
 }
-/* line 162, ../sass/nyt.scss */
+/* line 168, ../sass/nyt.scss */
 .content.years-articles {
   height: 516px;
 }
-/* line 164, ../sass/nyt.scss */
+/* line 170, ../sass/nyt.scss */
 .content.years-articles .months_timeline {
   opacity: 0;
   -webkit-transform: scale(1, 0);
@@ -176,7 +182,7 @@ text {
   -o-transform: scale(1, 0);
   transform: scale(1, 0);
 }
-/* line 169, ../sass/nyt.scss */
+/* line 175, ../sass/nyt.scss */
 .content.years-articles .years_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, -216px) scale(1, 1);
@@ -185,11 +191,11 @@ text {
   -o-transform: translate(0, -216px) scale(1, 1);
   transform: translate(0, -216px) scale(1, 1);
 }
-/* line 178, ../sass/nyt.scss */
+/* line 184, ../sass/nyt.scss */
 .content.years-months-articles {
   height: 732px;
 }
-/* line 181, ../sass/nyt.scss */
+/* line 187, ../sass/nyt.scss */
 .content.years-months-articles .months_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, 0) scale(1, 1);
@@ -198,7 +204,7 @@ text {
   -o-transform: translate(0, 0) scale(1, 1);
   transform: translate(0, 0) scale(1, 1);
 }
-/* line 189, ../sass/nyt.scss */
+/* line 195, ../sass/nyt.scss */
 .content.years-months-articles .years_timeline {
   opacity: 1.0;
   -webkit-transform: translate(0, 0) scale(1, 1);
@@ -208,7 +214,7 @@ text {
   transform: translate(0, 0) scale(1, 1);
 }
 
-/* line 199, ../sass/nyt.scss */
+/* line 205, ../sass/nyt.scss */
 .timeline {
   display: block;
   height: 200px;
@@ -225,12 +231,12 @@ text {
   transform-origin: 50% 0%;
   opacity: 1;
 }
-/* line 210, ../sass/nyt.scss */
+/* line 216, ../sass/nyt.scss */
 .timeline:last-child {
   margin-bottom: 0;
 }
 
-/* line 215, ../sass/nyt.scss */
+/* line 221, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar text.annotation, div.articles_timeline h2 {
   font-size: 14px;
   line-height: 18px;
@@ -242,30 +248,30 @@ svg.bar_graph_timeline g.bar text.annotation, div.articles_timeline h2 {
   margin: 0;
 }
 
-/* line 232, ../sass/nyt.scss */
+/* line 238, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar {
   cursor: pointer;
 }
-/* line 235, ../sass/nyt.scss */
+/* line 241, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar.empty, svg.bar_graph_timeline g.bar.active {
   cursor: auto;
 }
-/* line 239, ../sass/nyt.scss */
+/* line 245, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar rect {
   stroke: white;
   stroke-width: 2px;
 }
-/* line 244, ../sass/nyt.scss */
+/* line 250, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar rect.bg {
   fill: #f2f2f2;
   stroke: white;
   stroke-width: 2px;
 }
-/* line 250, ../sass/nyt.scss */
+/* line 256, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar rect.fg {
   fill: black;
 }
-/* line 254, ../sass/nyt.scss */
+/* line 260, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar text.label {
   font-size: 18px;
   line-height: 24px;
@@ -273,69 +279,69 @@ svg.bar_graph_timeline g.bar text.label {
   font-weight: 500;
   fill: #000;
 }
-/* line 262, ../sass/nyt.scss */
+/* line 268, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar text.annotation {
   width: 32px;
 }
-/* line 269, ../sass/nyt.scss */
+/* line 275, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar:hover rect.bg, svg.bar_graph_timeline g.bar:not(.empty).active rect.bg {
   fill: #d9d9d9;
 }
-/* line 273, ../sass/nyt.scss */
+/* line 279, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar:hover rect.fg, svg.bar_graph_timeline g.bar:not(.empty).active rect.fg {
   fill: #537dcc;
 }
-/* line 277, ../sass/nyt.scss */
+/* line 283, ../sass/nyt.scss */
 svg.bar_graph_timeline g.bar:hover:not(.empty) text.annotation, svg.bar_graph_timeline g.bar:not(.empty).active:not(.empty) text.annotation {
   fill: #000;
 }
-/* line 285, ../sass/nyt.scss */
+/* line 291, ../sass/nyt.scss */
 svg.bar_graph_timeline.narrow-bars g.bar text {
   opacity: 0;
 }
-/* line 290, ../sass/nyt.scss */
+/* line 296, ../sass/nyt.scss */
 svg.bar_graph_timeline.narrow-bars g.bar:hover text, svg.bar_graph_timeline.narrow-bars g.bar:not(.empty).active text {
   opacity: 1;
 }
 
-/* line 298, ../sass/nyt.scss */
+/* line 304, ../sass/nyt.scss */
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-/* line 303, ../sass/nyt.scss */
+/* line 309, ../sass/nyt.scss */
 ::-webkit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0.15);
 }
 
 /* Handle */
-/* line 309, ../sass/nyt.scss */
+/* line 315, ../sass/nyt.scss */
 ::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.35);
 }
 
-/* line 313, ../sass/nyt.scss */
+/* line 319, ../sass/nyt.scss */
 ::-webkit-scrollbar-thumb:window-inactive {
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-/* line 317, ../sass/nyt.scss */
+/* line 323, ../sass/nyt.scss */
 div.articles_timeline {
-  margin: 0 80px;
+  margin: 0 80px 16px;
   height: 300px;
 }
-/* line 321, ../sass/nyt.scss */
+/* line 327, ../sass/nyt.scss */
 div.articles_timeline .timelineContainer {
   width: 100%;
   position: relative;
   overflow: hidden;
 }
-/* line 327, ../sass/nyt.scss */
+/* line 333, ../sass/nyt.scss */
 div.articles_timeline h2 {
   line-height: 32px;
 }
-/* line 332, ../sass/nyt.scss */
+/* line 338, ../sass/nyt.scss */
 div.articles_timeline .article {
   background-color: #f2f2f2;
   color: #666;
@@ -346,7 +352,7 @@ div.articles_timeline .article {
   top: 0;
   border: 2px solid white;
 }
-/* line 342, ../sass/nyt.scss */
+/* line 348, ../sass/nyt.scss */
 div.articles_timeline .article .keywordsWrapper {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(242, 242, 242, 0)), color-stop(100%, rgba(242, 242, 242, 0.35)));
   background-image: -webkit-linear-gradient(top, rgba(242, 242, 242, 0), rgba(242, 242, 242, 0.35));
@@ -362,13 +368,13 @@ div.articles_timeline .article .keywordsWrapper {
   overflow-y: hidden;
   height: 32px;
 }
-/* line 354, ../sass/nyt.scss */
+/* line 360, ../sass/nyt.scss */
 div.articles_timeline .article .keywords {
   height: 22px;
   padding: 2px 4px;
   white-space: nowrap;
 }
-/* line 360, ../sass/nyt.scss */
+/* line 366, ../sass/nyt.scss */
 div.articles_timeline .article .keyword {
   color: rgba(0, 0, 0, 0.25);
   padding: 2px 4px;
@@ -382,11 +388,11 @@ div.articles_timeline .article .keyword {
   text-decoration: none;
   margin-right: 4px;
 }
-/* line 369, ../sass/nyt.scss */
+/* line 375, ../sass/nyt.scss */
 div.articles_timeline .article .keyword:hover {
   text-decoration: underline;
 }
-/* line 374, ../sass/nyt.scss */
+/* line 380, ../sass/nyt.scss */
 div.articles_timeline .article .rectInside:before, div.articles_timeline .article:after {
   content: "";
   width: 100%;
@@ -403,7 +409,7 @@ div.articles_timeline .article .rectInside:before, div.articles_timeline .articl
   background-image: linear-gradient(top, rgba(242, 242, 242, 0), rgba(242, 242, 242, 0.5));
   opacity: 0;
 }
-/* line 387, ../sass/nyt.scss */
+/* line 393, ../sass/nyt.scss */
 div.articles_timeline .article:after {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(242, 242, 242, 0.5)), color-stop(100%, #f2f2f2));
   background-image: -webkit-linear-gradient(top, rgba(242, 242, 242, 0.5), #f2f2f2);
@@ -412,7 +418,7 @@ div.articles_timeline .article:after {
   background-image: linear-gradient(top, rgba(242, 242, 242, 0.5), #f2f2f2);
   opacity: 1.0;
 }
-/* line 392, ../sass/nyt.scss */
+/* line 398, ../sass/nyt.scss */
 div.articles_timeline .article .rectInside {
   color: inherit;
   text-decoration: none;
@@ -423,7 +429,7 @@ div.articles_timeline .article .rectInside {
   right: 0;
   z-index: 1;
 }
-/* line 403, ../sass/nyt.scss */
+/* line 409, ../sass/nyt.scss */
 div.articles_timeline .article h3, div.articles_timeline .article p, div.articles_timeline .article cite {
   padding: 0 4px;
   display: block;
@@ -435,35 +441,35 @@ div.articles_timeline .article h3, div.articles_timeline .article p, div.article
   line-height: 20px;
   width: 320px;
 }
-/* line 415, ../sass/nyt.scss */
+/* line 421, ../sass/nyt.scss */
 div.articles_timeline .article h3 {
   font-size: 20px;
   line-height: 24px;
   font-weight: 500;
 }
-/* line 421, ../sass/nyt.scss */
+/* line 427, ../sass/nyt.scss */
 div.articles_timeline .article p {
   /* A magic number that limits the snippet to 3 lines of text */
   max-height: 62px;
   overflow-y: hidden;
 }
-/* line 427, ../sass/nyt.scss */
+/* line 433, ../sass/nyt.scss */
 div.articles_timeline .article cite {
   font-size: 14px;
   line-height: 16px;
 }
-/* line 433, ../sass/nyt.scss */
+/* line 439, ../sass/nyt.scss */
 div.articles_timeline .article.long h3 {
   font-size: 18px;
   line-height: 21px;
 }
-/* line 438, ../sass/nyt.scss */
+/* line 444, ../sass/nyt.scss */
 div.articles_timeline .article.long p {
   font-size: 14px;
   line-height: 16px;
   margin-bottom: 2px;
 }
-/* line 445, ../sass/nyt.scss */
+/* line 451, ../sass/nyt.scss */
 div.articles_timeline .article .imgContainer {
   position: absolute;
   left: 0;
@@ -473,7 +479,7 @@ div.articles_timeline .article .imgContainer {
   z-index: 0;
   min-width: 320px;
 }
-/* line 454, ../sass/nyt.scss */
+/* line 460, ../sass/nyt.scss */
 div.articles_timeline .article .imgContainer img {
   width: auto;
   height: auto;
@@ -483,45 +489,45 @@ div.articles_timeline .article .imgContainer img {
   top: 0;
   margin: auto;
 }
-/* line 465, ../sass/nyt.scss */
+/* line 471, ../sass/nyt.scss */
 div.articles_timeline .article .imgContainer.thumbnail img {
   width: auto;
   top: 12.5%;
 }
-/* line 470, ../sass/nyt.scss */
+/* line 476, ../sass/nyt.scss */
 div.articles_timeline .article .imgContainer:not(.thumbnail) img {
   min-width: 640px;
 }
-/* line 475, ../sass/nyt.scss */
+/* line 481, ../sass/nyt.scss */
 div.articles_timeline .article:hover {
   background-color: #537dcc;
   /* Lower the opacity of non-thumbnail images */
   /* Different hover appearance for articles with non-thumbnail images */
 }
-/* line 478, ../sass/nyt.scss */
+/* line 484, ../sass/nyt.scss */
 div.articles_timeline .article:hover .keyword {
   background: rgba(255, 255, 255, 0.5);
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 483, ../sass/nyt.scss */
+/* line 489, ../sass/nyt.scss */
 div.articles_timeline .article:hover .rectInside {
   color: #fff;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.65);
 }
-/* line 488, ../sass/nyt.scss */
+/* line 494, ../sass/nyt.scss */
 div.articles_timeline .article:hover:after {
   opacity: 0.0;
 }
-/* line 493, ../sass/nyt.scss */
+/* line 499, ../sass/nyt.scss */
 div.articles_timeline .article:hover .imgContainer:not(.thumbnail) {
   opacity: 0.65;
 }
-/* line 498, ../sass/nyt.scss */
+/* line 504, ../sass/nyt.scss */
 div.articles_timeline .article:hover .imgContainer:not(.thumbnail) + .rectInside {
   color: #fff;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.65);
 }
-/* line 502, ../sass/nyt.scss */
+/* line 508, ../sass/nyt.scss */
 div.articles_timeline .article:hover .imgContainer:not(.thumbnail) + .rectInside:before {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5)));
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
