--- a/flask/static/sass/nyt.scss
+++ b/flask/static/sass/nyt.scss
@@ -67,6 +67,12 @@ header {
         font-size: 24px;
     }
 
+    h2 {
+        font-size: 18px;
+        font-weight: 500;
+        color: $annotationTextColor;
+    }
+
     #page {
         font-family: Avenir;
         background-color: $bgColorActive;
@@ -315,7 +321,7 @@ svg.bar_graph_timeline {
 }
 
 div.articles_timeline {
-    margin: 0 $margin;
+    margin: 0 $margin 16px;
     height: $articlesTimelineHeight;
 
     .timelineContainer {
