Added GitHub link.

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -39,6 +39,7 @@
                         <strong>Nested Year Timelines (NYT)</strong> is a hierarchical timeline visualization. It supports exploring large sets of news articles from <strong><a href="http://nyt.com">The New York Times</a></strong>, based on a search query. <strong>Hover on or click a bar below to start exploring.</strong>
                         <br><br>Want to see a different set of articles? Check out the list of cached article searches on the left.
                         <br><br>Created by <strong><a href="http://stewed.co">Michael Beswetherick</a></strong> and <strong><a href="https://kohlmannj.com/">Joe Kohlmann</a></strong> as a final project for <a href="http://courses.cs.washington.edu/courses/cse512/14wi/">CSE 512: Data Visualization (Winter 2014)</a> at the <a href="http://uw.edu/">University of Washington</a>.
+                        <br><br><a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann">The code is available on GitHub</a>, by the way.
                     </p>
                 </div>
                 <div class="column">
